# falkordb-fastmcp

./: .env.example  .gitignore  CLAUDE.md  COMPLETION_SUMMARY.md  PULL_REQUEST.md  README.md  architecture_overview.md  main.py  pyproject.toml  server_dev.py
architecture/: README.md
architecture/diagrams/: 02_architecture_diagrams.md
architecture/docs/: 01_component_inventory.md  03_data_flows.md  04_api_reference.md
docs/: BUG-001_FIX_VERIFICATION.md  BUG-001_ROOT_CAUSE_ANALYSIS.md  GRAPHITI_INTEGRATION_GUIDE.md  VALIDATION_README.md  VALIDATION_REPORT.md  VALIDATION_SUMMARY.md  VALIDATION_TEST_PLAN.md
src/falkordb_mcp/: __init__.py  config.py  server.py  service.py
tests/: __init__.py  conftest.py  test_serialization.py  test_server.py  test_service.py
tests/fixtures/: mock_data.py
